# VideoCaster

./: CMakeLists.txt  LICENSE  Makefile  README  jcomp.c  jcomp.h  proto.h  start_vcap.sh  start_vcast.sh  vcap.c  vcaps.c  vcast.c  vserv.c
cmake/modules/: FindLiboRTP.cmake  ortpversion.c
src/: CMakeLists.txt  jcomp.h  vcast.c  vgrab.c  vgrab.h  vserv.c
